Added RabbitMQ to the solution

--- a/ServerMonitoring/ServerMonitoring.csproj
+++ b/ServerMonitoring/ServerMonitoring.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -9,6 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RabbitMQ\RabbitMq.csproj" />
   </ItemGroup>
 
 </Project>
