--- a/ServerStatistics/ServerStatistics.csproj
+++ b/ServerStatistics/ServerStatistics.csproj
@@ -8,11 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MongoDB.Bson" Version="2.22.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.6.0" />
     <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="7.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\RabbitMQ\RabbitMq.csproj" />
   </ItemGroup>
 
 </Project>
