--- a/ServerStatistics/ServerStatistics.csproj
+++ b/ServerStatistics/ServerStatistics.csproj
@@ -10,8 +10,11 @@
   <ItemGroup>
     <PackageReference Include="MongoDB.Bson" Version="2.22.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
-    <PackageReference Include="RabbitMQ.Client" Version="6.6.0" />
-    <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="7.0.0" />
+    <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SignalREndpoint\SignalREndpoint.csproj" />
   </ItemGroup>
 
 </Project>
