--- a/ServerStatistics/ServerStatistics.csproj
+++ b/ServerStatistics/ServerStatistics.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="MongoDB.Bson" Version="2.22.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.7.0" />
     <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="8.0.0" />
   </ItemGroup>
 
