Used configurations instead of hard coded values for RabbitMQ

--- a/GlobalConfigurations/appsettings.json
+++ b/GlobalConfigurations/appsettings.json
@@ -13,7 +13,12 @@
         "Url": "https://localhost:7265/Alerts"
     },
     "RabbitMqConfig": {
-        "HostName": "localhost"
+        "HostName": "localhost",
+        "ConsumerConnectionName": "Message consuming",
+        "PublisherConnectionName": "Message sending",
+        "ExchangeName": "Statistics exchange",
+        "QueueName": "ServerStatistics",
+        "ReconnectIntervalSeconds": 2
     },
     "MongoDbConfig": {
         "ConnectionString": "mongodb://localhost:27017"
