Used configurations instead of hard coded values for MongoDb

--- a/GlobalConfigurations/appsettings.json
+++ b/GlobalConfigurations/appsettings.json
@@ -21,6 +21,8 @@
         "ReconnectIntervalSeconds": 2
     },
     "MongoDbConfig": {
-        "ConnectionString": "mongodb://localhost:27017"
+        "ConnectionString": "mongodb://localhost:27017",
+        "ServerMonitoringDatabaseName": "ServerMonitoring",
+        "ServerStatisticsCollectionName": "ServerStatistics"
     }
 }
