Used configurations instead of hard coded values for SignalR

--- a/GlobalConfigurations/appsettings.json
+++ b/GlobalConfigurations/appsettings.json
@@ -10,7 +10,8 @@
         "CpuUsageThresholdPercentage": 0.9
     },
     "SignalRConfig": {
-        "Url": "https://localhost:7265/Alerts"
+        "Url": "https://localhost:7265/Alerts",
+        "ReconnectIntervalSeconds": 2
     },
     "RabbitMqConfig": {
         "HostName": "localhost",
